[tool.poetry]
name = "clinfo-ai"
version = "0.1.0"
description = ""
authors = ["Hồ Lê Minh Thạch <thach.holeminh@gmail.com>"]
readme = "README.md"
packages = [{include = "clinfo"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.7"
aiohttp = "3.9.5"
datasets = "^2.20.0"
pathlib = "^1.0.1"
bio = "^1.7.1"
langchain = "^0.2.12"
langchain-community = "^0.2.11 "
google-generativeai = "^0.7.2"
faiss-cpu = "^1.8.0.post1"
debugpy = "^1.8.5"
pandas = "^2.2.2"
biopython = "1.81"
streamlit = "^1.37.1"
watchdog = "^4.0.1"
openai = "^1.40.0"
torch = "^2.4.0"
transformers = "^4.44.0"
uvicorn = "^0.30.5"
fastapi = "^0.112.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
